<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="action_signup">Signup</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="text_welcome">Welcome</string>
    <string name="text_welcome_desc">This is a shoe store app</string>
    <string name="action_next">Next</string>

    <string name="text_instruction">Instruction</string>
    <string name="text_instruction_desc">In this app you can browse through shoes and add new ones if you like</string>
    <string name="logout">Logout</string>

    <string name="text_name">Name</string>
    <string name="text_company">Company</string>
    <string name="text_shoe_size">Shoe size</string>
    <string name="text_description">Description</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
</resources>
